--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,19 +6,6 @@ h1 {
   color: blue;
 }
 
-h2 {
+.title {
   color: brown;
-}
-
-span {
-  color: darkgoldenrod;
-}
-
-#img3 {
-  width: 1000px;
-}
-
-#img4 {
-  width: 600px;
-  height: auto;
 }
